manifest_deployment_wordpress.yml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: wordpress
  namespace: wordpress-namespace
  labels: 
    app: wordpress
spec:
  replicas: 1
  selector:
   matchLabels:
     app: wordpress
  strategy:
     type: RollingUpdate
  template:
     metadata: 
       labels:
          app: wordpress
     spec:
         containers:
          - name: wordpress
            image: wordpress:4.8-apache
            ports:
              - containerPort: 80
                name: wordpress
            volumeMounts:
              - name: wp-pvc
                mountPath: /var/www/html
         volumes:
         - name: wp-pvc
           persistentVolumeClaim:
             claimName: pvc-wordpress
